# KTrade

./: .env.example  .gitignore  README.md  pyproject.toml
src/: alembic.ini  app.py  config.py
src/alembic/: env.py  models.py
src/alembic/versions/: 2e41194ac999_create_models.py  3a4bd048a7c6_create_table_models.py  bb9d23e0c68b_generate.py  f5c7cc60d116_add_flag_cascade.py  f941f873a078_.py
src/models/: __init__.py  table.py
src/pydantic_models/: __init__.py  table.py
src/routes/: __init__.py
src/routes/misc/: __init__.py  image.py
src/routes/table/: __init__.py  inventory.py  sale.py
src/schemas/: __init__.py  base.py  enums.py  items.py
src/serivces/: inventory.py  parser.py
src/setup/: __init__.py  database.py  loguru_logging.py  misc.py
src/utils/: database.py
